--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -26,4 +26,7 @@
     <!-- [CHAR LIMIT=NONE] Device Info screen. Okay we get it, stop pressing, you already have it on -->
     <string name="show_dev_already_xosp">No need, you have already enabled development settings.</string>
 
+    <!-- Launch Dev Tools -->
+    <string name="development_tools_title">Development tools</string>
+
 </resources>
