--- a/res/xml/xosp_misc_cat.xml
+++ b/res/xml/xosp_misc_cat.xml
@@ -27,6 +27,14 @@
             android:key="tap_to_wake"
             android:title="@string/tap_to_wake"
             android:summary="@string/tap_to_wake_summary" />
+
+        <!-- Proximity on Wake -->
+        <SwitchPreference
+            android:key="proximity_on_wake"
+            android:title="@string/proximity_wake_title"
+            android:summary="@string/proximity_wake_summary"
+            android:defaultValue="true" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
