Settings: update About screen device model fields
- Changed "Model name" to "Device model", this queries ro.product.model
- Added an optional "Device name" field which queries ro.product.name
- The new "Device name" field is disabled by default

Change-Id: If837674091b4612124e1eff00e884823be767f47
Signed-off-by: Roman Birg <roman@cyngn.com>

--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -16,6 +16,11 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- About phone screen, Device model -->
+    <string name="device_model">Device model</string>
+    <!-- About phone screen, Device name -->
+    <string name="device_name">Device name</string>
+
     <!-- [CHAR LIMIT=NONE] Device Info screen. Countdown for user taps to enable development settings -->
     <plurals name="show_dev_countdown_xosp">
         <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from enabling development settings.</item>
