--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -107,4 +107,14 @@
     <string name="xospapps_title">XOSPApps status</string>
     <string name="xospapps_default_string">Not installed</string>
 
+
+    <!-- Color picker -->
+    <string name="dialog_color_picker_title">Color Picker</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="palette_darkkat_title">Benzo</string>
+    <string name="palette_material_title">Material</string>
+    <string name="palette_rgb_title">RGB</string>
+    <string name="reset_android_title">Android default</string>
+    <string name="reset_darkkat_title">DarkKat default</string>
+
 </resources>
