Double tap to sleep anywhere on the lock screen (2/2)
Change-Id: Ia59427afbcf2b657e08d9bc9e488f5294aec25ab
Signed-off-by: scott <scott@ubuntu>
Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/xml/xosp_lockscreen_cat.xml
+++ b/res/xml/xosp_lockscreen_cat.xml
@@ -19,6 +19,11 @@
     settings:keywords="@string/keywords_display">
 
         <SwitchPreference
+           android:key="double_tap_sleep_anywhere"
+           android:title="@string/double_tap_sleep_anywhere_title"
+           android:summary="@string/double_tap_sleep_anywhere_summary" />
+
+        <SwitchPreference
            android:key="lockscreen_see_through"
            android:title="@string/lockscreen_see_through_title"
            android:summary="@string/lockscreen_see_through_summary"
