--- a/res/values/xosp_arrays.xml
+++ b/res/values/xosp_arrays.xml
@@ -189,4 +189,10 @@
         <item>5000</item>
     </string-array>
 
+    <!-- SystemApp Remover -->
+    <string-array name="slimsizer_profile_array">
+        <item >Load Profile</item>
+        <item >Save Profile</item>
+    </string-array>
+
 </resources>
