Color picker: Rework
Color picker: Rework, wip part 1:

- Temporary remove the tablet layout
- Panel buttons:
  - use a scroll view
  - Change to circular
  - Show hex value
  - Show title, (Material, DarkKat or RGB)

Color picker: Rework, wip part 2:

- Add favorite button function

Color picker: Rework, wip part 3:

Needed commit:
Popup menu: Add support for item icons:
https://github.com/XXMrHyde/android_frameworks_base/commit/8f66dd6953bab29cdf29c14c3022b5f9fdc1fe64

- Remove old color button
- Remove new color button, (moved to the action bar)

Action bar:
- Remove pallete button
- Remove reset button
- Remove edit hex button
- Add more menu:
  - Reset
  - Edit hex
- Add apply color button
  (only visible when new color is not old color)
- Add color preview

Panel color buttons:
- Add all available color buttons

To do:
- Add animations to the apply color button and color preview

Color picker: Rework, wip part 4:

- Animate apply color button
- Fix edit hex bar visibility on orientation change
- Clean up animators
- use a FrameLayout for the action bar
- General code clean up

Color picker: Rework, wip part 5:

- Option to show/hide the favorites
- Use one Animator for all animations

Color picker: Rework, wip part 6:

Fix action bar visibility when a hex string was applied.

Don`t use the OnColorChangedListener callback,
this will start the color transition animation,
and breaks the hex/main action bar visibility animation.

Color picker: Rework, wip part 7:

- Add help screen

Color picker: Fix build

Color picker: Update help screen text:

Thanks @rogersb11 for the updated text

Color picker: Rework, wip part 8:

Improvements:

- Add the possibility to set one reset color value only
- Add the possibility to set the reset color menu title(s)
- Add the possibility to set the reset color value(s) and menu title(s)
  via xml attribute(s)
- Fix the xml attribute for alpha slider visibility
- When no reset color value is set, the reset function is disabled
- When

--- a/res/values-land/xosp_dimens.xml
+++ b/res/values-land/xosp_dimens.xml
@@ -16,8 +16,23 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Color Picker -->
-    <string name="hex" translatable="false">Hex:</string>
-    <string name="hex_hint" translatable="false">#ff000000</string>
+    <!-- Color picker -->
 
+    <!-- Dialog -->
+
+    <!-- Dialog action bar -->
+
+    <!-- Height of the color picker dialog action bar -->
+    <dimen name="color_picker_dialog_action_bar_height">48dp</dimen>
+
+    <!-- Dialog color buttons -->
+
+    <!-- Top margin of the color picker dialog color buttons scroll view -->
+    <dimen name="color_picker_dialog_color_buttons_scroll_view_margin_top">16dp</dimen>
+
+    <!-- Left margin of the color picker dialog buttons title -->
+    <dimen name="color_picker_dialog_color_buttons_title_margin_left">8dp</dimen>
+
+    <!-- Left margin of the color picker dialog color buttons layout  -->
+    <dimen name="color_picker_dialog_color_buttons_layout_margin_left">4dp</dimen>
 </resources>
