--- a/res/drawable/color_picker_favorite_color_button_empty.xml
+++ b/res/drawable/color_picker_favorite_color_button_empty.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2016 The Xperia Open Source Project
+<!-- Copyright (C) Copyright (C) 2015 DarkKat
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,10 +13,16 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Color Picker -->
-    <string name="hex" translatable="false">Hex:</string>
-    <string name="hex_hint" translatable="false">#ff000000</string>
-
-</resources>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/background"
+            android:drawable="@drawable/color_picker_alpha_pattern" />
+    <item android:id="@+id/boarder">
+        <shape android:shape="oval">
+            <stroke android:width="1dp"
+                    android:color="#ff6e6e6e" />
+        </shape>
+    </item>
+    <item android:id="@+id/icon"
+            android:drawable="@drawable/ic_favorite_emty" />
+</layer-list>
