--- a/res/values/xosp_colors.xml
+++ b/res/values/xosp_colors.xml
@@ -83,4 +83,8 @@
     <color name="colorpick_primary_dark">@*android:color/material_blue_grey_950</color>
     <color name="colorpick_accent">@*android:color/material_deep_teal_500</color>
 
+    <!-- Colors of the help screen -->
+    <color name="dialog_color_picker_help_background">#e0000000</color>
+    <color name="dialog_color_picker_help_summary_text_color">#b3ffffff</color>
+
 </resources>
