--- a/res/values-sw600dp-land/dk_dimens.xml
+++ b/res/values-sw600dp-land/dk_dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2016 The Xperia Open Source Project
+<!-- Copyright (C) 2016 DarkKat
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -21,7 +20,7 @@
     <!-- Action bar -->
 
     <!-- Height of the action bar -->
-    <dimen name="color_picker_action_bar_height">48dp</dimen>
+    <dimen name="color_picker_action_bar_height">64dp</dimen>
 
     <!-- Color buttons -->
 
