--- a/res/values/xosp_themes.xml
+++ b/res/values/xosp_themes.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2016 The Xperia Open Source Project
@@ -17,7 +18,10 @@
 <resources>
 
     <style name="Theme.ColorPickerDialog" parent="@android:style/Theme.Material">
-        <item name="android:colorBackground">@color/darkkat_blue_grey</item>
+        <item name="android:colorBackground">@color/colorpick_primary</item>
+        </style>
+    <style name="Theme.ColorPickerFragment" parent="@android:style/Theme.Material">
+        <item name="android:colorBackground">@*android:color/darkkat_blue_grey</item>
         <item name="android:windowBackground">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">false</item>
