--- a/res/values/xosp_arrays.xml
+++ b/res/values/xosp_arrays.xml
@@ -102,4 +102,15 @@
         <item>8</item>
     </string-array>
 
+    <!-- Battery customizations -->
+    <string-array name="status_bar_battery_style_entries" translatable="false">
+        <item>@string/status_bar_battery_style_text</item>
+        <item>@string/status_bar_battery_style_hidden</item>
+    </string-array>
+
+    <string-array name="status_bar_battery_style_values" translatable="false">
+        <item>6</item>
+        <item>4</item>
+    </string-array>
+
 </resources>
