--- a/res/values/xosp_strings.xml
+++ b/res/values/xosp_strings.xml
@@ -215,4 +215,10 @@
     <string name="double_tap_sleep_anywhere_title">DT2S on Lockscreen</string>
     <string name="double_tap_sleep_anywhere_summary">Double tap lockscreen to put the device to sleep</string>
 
+    <!-- Battery customizations -->
+    <string name="status_bar_battery_style_category">Battery</string>
+    <string name="status_bar_battery_style_title">Battery status style</string>
+    <string name="status_bar_battery_style_text">Xperia Battery Prototype</string>
+    <string name="status_bar_battery_style_hidden">Hidden</string>
+
   </resources>
