--- a/res/xml/xosp_statusbar_cat.xml
+++ b/res/xml/xosp_statusbar_cat.xml
@@ -18,4 +18,14 @@
     android:title="@string/notification_drawer_title"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+
+    <ListPreference
+        android:key="status_bar_battery_style"
+        android:title="@string/status_bar_battery_style_title"
+        android:summary="%s"
+        android:dialogTitle="@string/status_bar_battery_style_title"
+        android:entries="@array/status_bar_battery_style_entries"
+        android:entryValues="@array/status_bar_battery_style_values"
+        android:defaultValue="6" />
+
 </PreferenceScreen>
