--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -486,6 +486,8 @@
     <string name="volume_keys_control_ring_stream_title">Control ringtone volume</string>
     <string name="volume_keys_control_ring_stream_summary_on">Volume keys control ringtone volume</string>
     <string name="volume_keys_control_ring_stream_summary_off">Volume keys control media volume</string>
+    <string name="navigation_bar_home_long_press_title">Home long press action</string>
+    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
 
     <string name="reset">Reset</string>
 
