--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -15,48 +15,117 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:cm="http://schemas.android.com/apk/res/cyanogenmod.platform"
         android:title="@string/about_settings">
 
-        <!-- System update settings - launches activity -->
-        <PreferenceScreen android:key="system_update_settings"
-                android:title="@string/system_update_settings_list_item_title"
-                android:summary="@string/system_update_settings_list_item_summary">
-            <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-        </PreferenceScreen>
+        <!-- XOSP Banner
+        <com.android.settings.xosp.XOSPLogo android:key="xosp_logo"
+            android:enabled="false"
+            android:selectable="false"
+            android:layout="@layout/xosp_banner" />-->
 
+        <PreferenceCategory
+			android:title="@string/device_info_xosp_category">
 
-        <PreferenceScreen android:key="additional_system_update_settings"
-                          android:title="@string/additional_system_update_settings_list_item_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="@string/additional_system_update"
-                    android:targetClass="@string/additional_system_update_menu" />
-        </PreferenceScreen>
+			<!-- XOSP Revision -->
+            <Preference android:key="xosp_revision"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/xosp_revision"
+                android:summary="@string/device_info_default" />
 
-        <!-- CyanogenMod Updates -->
-        <cyanogenmod.preference.SelfRemovingPreference android:key="cm_updates"
-                android:title="@string/cmupdate_settings_title"
-                android:summary="@string/system_update_settings_list_item_summary"
-                cm:requiresOwner="true"
-                cm:requiresPackage="com.cyanogenmod.updater">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.cyanogenmod.updater"
-                    android:targetClass="com.cyanogenmod.updater.UpdatesSettings" />
-        </cyanogenmod.preference.SelfRemovingPreference>
+            <!-- XOSP Release -->
+            <Preference android:key="xosp_release"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/xosp_release"
+				android:summary="@string/device_info_default" />
 
-        <!-- Device status - launches activity -->
+			<!-- Mod version -->
+        	<Preference android:key="mod_version"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/mod_version"
+                android:summary="@string/mod_version_default" />
+
+            <!-- Build date -->
+        	<Preference android:key="build_date"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/build_date"
+                android:summary="@string/build_date_default" />
+
+            <!-- Detailed build version -->
+        	<Preference android:key="build_number"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/build_number"
+                android:summary="@string/device_info_default"/>
+
+        </PreferenceCategory>
+
+        <PreferenceCategory
+			android:title="@string/device_info_device_category">
+
+			<!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
-                android:summary="@string/device_status_summary"
-                android:fragment="com.android.settings.deviceinfo.Status">
+                android:summary="@string/device_status_summary">
+            <intent android:action="android.intent.action.MAIN"
+                    android:targetPackage="com.android.settings"
+                    android:targetClass="com.android.settings.Settings$StatusActivity" />
         </PreferenceScreen>
 
-        <!-- Manual -->
-        <PreferenceScreen
-                android:key="manual"
-                android:title="@string/manual">
-            <intent android:action="android.settings.SHOW_MANUAL" />
-        </PreferenceScreen>
+        	<!-- Device hardware model -->
+        	<Preference android:key="device_model"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/model_number"
+                android:summary="@string/device_info_default"/>
+
+            <!-- Device Baseband version -->
+        	<Preference android:key="baseband_version"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/baseband_version"
+                android:summary="@string/device_info_default"/>
+
+            <!-- Device Kernel version -->
+        	<Preference android:key="kernel_version"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/kernel_version"
+                android:summary="@string/device_info_default"/>
+
+        </PreferenceCategory>
+
+        <PreferenceCategory
+			android:title="@string/device_info_android_category">
+
+			<!-- Device firmware version -->
+        	<Preference android:key="firmware_version"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/firmware_version"
+                android:summary="@string/device_info_default"/>
+
+	        <!-- Security patch level -->
+	        <Preference android:key="security_patch"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/security_patch"
+                android:summary="@string/device_info_default"/>
+
+            <!-- SELinux status information -->
+        	<Preference android:key="selinux_status"
+                android:enabled="false"
+                android:shouldDisableView="false"
+                android:title="@string/selinux_status"
+                android:summary="@string/selinux_status_enforcing"/>
+
+        </PreferenceCategory>
+
+        <PreferenceCategory
+			android:title="@string/device_info_other_category">
 
         <!-- Legal Information -->
         <PreferenceScreen
@@ -64,116 +133,12 @@
                 android:title="@string/legal_information"
                 android:fragment="com.android.settings.LegalSettings" />
 
-        <PreferenceScreen
-                android:key="regulatory_info"
-                android:title="@string/regulatory_labels">
-            <intent android:action="android.settings.SHOW_REGULATORY_INFO" />
-        </PreferenceScreen>
-
-        <PreferenceScreen
-                android:key="safety_info"
-                android:title="@string/safety_and_regulatory_info">
-                <intent android:action="android.settings.SHOW_SAFETY_AND_REGULATORY_INFO" />
-        </PreferenceScreen>
-
-        <!-- Feedback on the device -->
-        <PreferenceScreen android:key="device_feedback"
-                android:title="@string/device_feedback">
-        </PreferenceScreen>
-
+        <!--TO-DO Remove cloud contributors once CMParts refactor is done -->
+        
         <!-- Contributors cloud -->
         <org.cyanogenmod.internal.cmparts.CMPartsPreference
                 android:key="contributors" />
 
-        <!-- Device hardware model -->
-        <Preference android:key="device_model"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/model_number"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Device firmware version -->
-        <Preference android:key="firmware_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/firmware_version"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Mod version -->
-        <Preference android:key="mod_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/mod_version"
-                android:summary="@string/mod_version_default" />
-
-        <!-- CyanogenMod API Version -->
-        <Preference android:key="mod_api_level"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/mod_api_level"
-                android:summary="@string/mod_api_level_default" />
-
-        <!-- Security patch level -->
-        <PreferenceScreen android:key="security_patch"
-                android:title="@string/security_patch"
-                android:summary="@string/device_info_default">
-                <intent android:action="android.intent.action.VIEW"
-                        android:data="https://source.android.com/security/bulletin/" />
-        </PreferenceScreen>
-
-        <!-- Device FCC equipment id -->
-        <Preference android:key="fcc_equipment_id"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/fcc_equipment_id"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Device MBN version -->
-        <Preference android:key="mbn_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/mbn_version"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Device Baseband version -->
-        <Preference android:key="baseband_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/baseband_version"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Device Kernel version -->
-        <Preference android:key="kernel_version"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/kernel_version"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Build date -->
-        <Preference android:key="build_date"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default" />
-
-        <!-- Detailed build version -->
-        <Preference android:key="build_number"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/build_number"
-                android:summary="@string/device_info_default"/>
-
-        <!-- Device QGP version -->
-        <Preference android:key="qgp_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/qgp_version"
-		android:summary="@string/device_info_default"/>
-
-        <!-- SELinux status information -->
-        <Preference android:key="selinux_status"
-                android:enabled="false"
-                android:shouldDisableView="false"
-                android:title="@string/selinux_status"
-                android:summary="@string/selinux_status_enforcing"/>
+	</PreferenceCategory>
 
 </PreferenceScreen>
