Initial implementation of XOSPWorld
- Add Dashboard category
- Initial bring up of the MM classes (except About)
- Add XOSP Settings
- N adaptions

Signed-off-by: Calin <nilac8991@gmail.com>

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -96,6 +96,8 @@
     <color name="importance_icon_tint">#8a000000</color>
     <color name="importance_disabled_tint">#4d000000</color>
 
+    <color name="theme_accent">#d35400</color>
+
     <!-- Accessibility SUW colors -->
     <color name="material_blue_500">#4285F4</color>
     <color name="material_blue_700">#3367D6</color>
